--- a/Night-Rain/19238-a-meeting-of-fate/rus.textile
+++ b/Night-Rain/19238-a-meeting-of-fate/rus.textile
@@ -630,7 +630,7 @@
 
 Ожидая, Лилли больше оценивала своё окружение. Она сняла кислородную маску, она ей не понадобилась, и снова попыталась сесть. Боль пронзила её тело, она тихонько всхлипнула, но сумела остаться в вертикальном положении.
 
-Внутри комнаты, справа от кровати Лилли, в приподнятой части стены виднелась маленькая дверь. Она не вела в коридор, эта дверь была чуть правее. Она пришла к выводу, что это должен быть либо шкаф для хранения вещей, либо в*нная комната. Мысль о том, что это в*нная, заставила мочевой пузырь Лилли послать ещё один сигнал, заставив Лилли немного поёрзать в течение секунды или двух. Слева от её кровати стояло маленькое деревянное кресло, на стуле лежал школьный костюм Лилли без её блузки, а её сумка свисала со спинки.
+Внутри комнаты, справа от кровати Лилли, в приподнятой части стены виднелась маленькая дверь. Она не вела в коридор, эта дверь была чуть правее. Она пришла к выводу, что это должен быть либо шкаф для хранения вещей, либо туалет. Мысль о том, что это туалет, заставила мочевой пузырь Лилли послать ещё один сигнал, заставив Лилли немного поёрзать в течение секунды или двух. Слева от её кровати стояло маленькое деревянное кресло, на стуле лежал школьный костюм Лилли без её блузки, а её сумка свисала со спинки.
 
 «Приятно знать, что моя сумка в безопасности». Лилли задумалась.
 
@@ -698,7 +698,7 @@
 
 — Поднесите меня, пожалуйста… — тихо попросила она.
 
-Медсестра вздохнула, взяла Лилли в сумку принцессы и направилась к в*нной комнате.
+Медсестра вздохнула, взяла Лилли в сумку принцессы и направилась к туалету.
 
 — Во что я ввязался? Медсестра задумалась. Затем она посмотрела на беспомощную Лилли в своих руках, она была на удивление лёгкой и её было легко носить с собой. «Тем не менее, даже если она и девчонка, она выглядит довольно мило. Как обычная девушка». Медсестра закончила, естественно улыбнувшись Лилли.
 
@@ -880,7 +880,7 @@
 
 Примерно через несколько секунд Лилли снова проснулась и почувствовала небольшое давление в животе. Она вылезла из постели, немного съёжившись от пронзившей её боли, и что-то пробормотала фигуре.
 
-«Я… собираюсь… в… отпустить». Она пробормотала, направляясь к в*нной комнате, где всё ещё играла музыка, а телефон был в кармане блузки.
+«Я… собираюсь… в… отпустить». Она пробормотала, направляясь к туалету, где всё ещё играла музыка, а телефон был в кармане блузки.
 
 Юкина рассмеялась, увидев результаты своего нападения на Кару. Она полетела в ту сторону, куда летела Кара, и увидела, что врезалась в плывущую вниз комнату. Юкина наблюдала, как одежда Кары изменилась, и она снова стала носить одежду, в которой была раньше. Она лежала в небольшой луже собственной крови, а Юкина только смеялась.
 
@@ -894,7 +894,7 @@
 
 Лилли вошла в туалет и закрыла за собой дверь. Она села на унитаз и опустошила мочевой пузырь. Закончив, она вытерлась, спустила воду в унитазе и вымыла руки. Она всё ещё не выспалась, поэтому решила вернуться в постель. Поскольку музыка всё ещё играла, она не слышала шума, доносившегося из её комнаты.
 
-Она вышла из в*нной и сонно потёрла глаза. Она прошла мимо всего происходящего со случайным появлением девушки через окно в её комнату и врачами, спешащими вытащить её и обработать её раны.
+Она вышла из туалета и сонно потёрла глаза. Она прошла мимо всего происходящего со случайным появлением девушки через окно в её комнату и врачами, спешащими вытащить её и обработать её раны.
 
 «шумно». Она пробормотала сквозь зевок. Затем она забралась обратно в постель и снова заснула.
 
@@ -1706,7 +1706,7 @@
 
 Но это, похоже, не сработало, поскольку Лили сдалась и позволила близнецам остаться с ними.
 
-Кара тут же вышла из в*нной и ждала снаружи.
+Кара тут же вышла из туалета и ждала снаружи.
 
 «Что со мной происходит?» — подумала Кара.
 
@@ -1890,7 +1890,7 @@
 
 «Итак, начнём!» — сказала Хейли, наполняя свою чашку Спрайтом.
 
-Кара улыбнулась тому, что дела пошли лучше, она пошла с близнецами и пошла с ними в в*нную, прежде чем вернуться туда, где была Лили, на этот раз она села рядом с Холли.
+Кара улыбнулась тому, что дела пошли лучше, она пошла с близнецами и пошла с ними в туалет, прежде чем вернуться туда, где была Лили, на этот раз она села рядом с Холли.
 
 «Всё в порядке, здесь все друзья», — сказала Кара Холли.
 
@@ -2098,7 +2098,7 @@
 
 Лилли и близнецы вошли в зал игровых автоматов и подошли к главной кассе. Лилли передала немного денег и получила в общей сложности 60 жетонов для игр и аттракционов.
 
-«У нас по 20 штук. После того, как мы их все израсходуем, мы посчитаем, сколько билетов у нас есть, и посмотрим, на что мы можем их обменять». Лилли сказала близнецам. «Мы должны держаться вместе. Я не хочу, чтобы вы двое заблудились. Помни, если тебе понадобится в*нная, дай мне знать, и мы сразу пойдём. Я не хочу, чтобы у тебя были несчастные случаи, потому что ты слишком участвует в игре. Особенно ты, Хейли.
+«У нас по 20 штук. После того, как мы их все израсходуем, мы посчитаем, сколько билетов у нас есть, и посмотрим, на что мы можем их обменять». Лилли сказала близнецам. «Мы должны держаться вместе. Я не хочу, чтобы вы двое заблудились. Помни, если тебе понадобится туалет, дай мне знать, и мы сразу пойдём. Я не хочу, чтобы у тебя были несчастные случаи, потому что ты слишком участвует в игре. Особенно ты, Хейли.
 
 «Буу». Хейли ответила, надувшись на Лилли.
 
@@ -2222,7 +2222,7 @@
 
 «Я знаю, что они были рядом с туалетами, но если у вас возникнут проблемы, вы можете использовать мои трусики, вы же не хотите испортить свои собственные, не так ли?» — спросила Кара.
 
-Она снова взяла Холли за руку, и они снова направились в в*нную.
+Она снова взяла Холли за руку, и они снова направились в туалет.
 
 «О, и, пожалуйста, зови меня Кара».
 
@@ -2262,7 +2262,7 @@
 
 Кара всё ещё злилась из-за последних событий, которые произошли, она заметила ещё одну из этих машин. У него была игрушка, похожая на ту, что была у Холли раньше, когда она подошла к машине и, поместив внутрь жетон, начала играть в игру, двигая маленькой рукой машины. Для мягкой игрушки, которую она хотела, одна была похожа на магла, а другая на чокобо. Закрыв глаза, Кара применила магию.
 
-Чтобы машинная рука хватала те игрушки, которые ей хотелось. Как только это произошло, Кара достала из автомата обе мягкие игрушки и пошла обратно в в*нную. Она вошла внутрь, увидела Лилли и подошла к ней.
+Чтобы машинная рука хватала те игрушки, которые ей хотелось. Как только это произошло, Кара достала из автомата обе мягкие игрушки и пошла обратно в туалет. Она вошла внутрь, увидела Лилли и подошла к ней.
 
 «О, ничего, если я подарю близнецам ещё животных?» — спросила Кара.
 
@@ -2316,7 +2316,7 @@
 
 «Добро пожаловать», сказала она.
 
-При этом Кара повернулась лицом к Лили, так что она слегка поёжилась из-за того, что не нуждалась в в*нной. Больше похоже на то, как прикосновения Холли превратились в её собственные. Именно эти мысли Кара прикрывает своей сильнейшей защитной магией.
+При этом Кара повернулась лицом к Лили, так что она слегка поёжилась из-за того, что не хотела в туалет. Больше похоже на то, как прикосновения Холли превратились в её собственные. Именно эти мысли Кара прикрывает своей сильнейшей защитной магией.
 
 «О, котята милые, мне нравится, когда они мяукают и мурлыкают», — сказала ей Кара.
 
@@ -2768,7 +2768,7 @@
 
 «Нам лучше пойти за ними, чтобы убедиться, что они делают то, что им говорят. Я знаю, что Холли сделает это, но я не слишком уверен насчёт Хейли». Лилли сказала Каре.
 
-Она последовала за близнецами, пока они шли к в*нным комнатам, которые она начинала чувствовать своими. Потребность в том, чтобы уйти: «Думаю, ты права, если что-то выйдет из-под контроля, Хейли, мы могли бы попробовать что-нибудь ещё», — сказала ей Кара.
+Она последовала за близнецами, пока они шли к туалетам, которые она начинала чувствовать своими. Потребность в том, чтобы уйти: «Думаю, ты права, если что-то выйдет из-под контроля, Хейли, мы могли бы попробовать что-нибудь ещё», — сказала ей Кара.
 
 Вскоре они подошли к туалету, и Кара вошла внутрь.
 
@@ -2844,7 +2844,7 @@
 
 Она начала выбегать из туалетов в главную галерею. Когда она добралась до галереи, она прыгнула через главное окно. Стекло разбилось, и многие посетители с криком выбежали из главной двери. Огненный шар последовал за Лилли, отправив близнецов в одно и то же разбитое окно.
 
-Казалось, что Лили отступает, Кара последовала за ней и вылетела из в*нной, как летучая мышь из ада. Она увидела, как Лили выпрыгнула из окна с близнецами позади неё. Быстро летя, Кара последовала за ней из того же окна. Вскоре они были у главного входа в пассаж, и она наблюдала, как посетители бегали вокруг с криками, пытаясь удрать от них.
+Казалось, что Лили отступает, Кара последовала за ней и вылетела из туалета, как летучая мышь из ада. Она увидела, как Лили выпрыгнула из окна с близнецами позади неё. Быстро летя, Кара последовала за ней из того же окна. Вскоре они были у главного входа в пассаж, и она наблюдала, как посетители бегали вокруг с криками, пытаясь удрать от них.
 
 Не обращая на них внимания, она снова заметила группу из трёх человек и выпустила крошечные лопасти ветра. У Лили достаточно, чтобы навредить, но не настолько. На краткий миг в её голове возникли образы Холли, но Кара быстро прогнала их.
 
@@ -3338,17 +3338,17 @@
 
 «Не оскорбляй её так, то, что ты сказал, было грубо», добавила Кара.
 
-Вскоре они добрались до в*нной, и Лилли открыла дверь. Кара быстро вошла внутрь, но по странной причине не хотела оставаться одна. Она повернулась к Лилли и спросила, немного покраснев.
+Вскоре они добрались до туалета, и Лилли открыла дверь. Кара быстро вошла внутрь, но по странной причине не хотела оставаться одна. Она повернулась к Лилли и спросила, немного покраснев.
 
 «К-ты можешь составить мне компанию?»
 
-«В*нные комнаты — это частные места! Я не могу этого делать!» Лилли ответила, сильно краснея.
+«Туалеты — это частные места! Я не могу этого делать!» Лилли ответила, сильно краснея.
 
 «Хотя мне как ни странно хочется…» — подумала Лилли.
 
 — Ты достаточно взрослый, чтобы идти один. — добавила Лилли.
 
-Кара получила ответ и вошла в в*нную комнату одна. Она подошла и села на унитаз, сначала стянула трусики и выпустила струю мочи в унитаз. Сидя там, она представила себе Лилли, стоящую и наблюдающую, как она извивается в собственном желании пописить.
+Кара получила ответ и вошла в туалет одна. Она подошла и села на унитаз, сначала стянула трусики и выпустила струю мочи в унитаз. Сидя там, она представила себе Лилли, стоящую и наблюдающую, как она извивается в собственном желании пописить.
 
 «Я хотела, чтобы она увидела меня», — подумала Кара.
 
@@ -3382,7 +3382,7 @@
 
 Они подошли к дверям дома, и Кара повернулась, обняв каждую девушку и поцеловав их в лоб. Она вышла из дома и начала свой путь домой.
 
-Лилли выбрала свою лучшую одежду и нижнее бельё и положила их на кровать. Затем она пошла в в*нну, чтобы быстро привести себя в порядок перед этим, казалось бы, важным мероприятием. Прежде чем войти в в*нну, Лилли сначала пошла в туалет, чтобы убедиться, что на этой встрече не будет перерывов, она знала, как отреагирует её Мать, если она попросит разрешения сходить в туалет. Закончив, она вытерлась, спустила воду в унитазе и пошла умываться. В*нна Сера была почти размером с общественный бассейн. Он был огромным. Лилли лениво привела себя в порядок. Всё это дело заняло около двадцати минут.
+Лилли выбрала свою лучшую одежду и нижнее бельё и положила их на кровать. Затем она пошла, чтобы быстро привести себя в порядок перед этим, казалось бы, важным мероприятием. Прежде чем войти в в%нну, Лилли сначала пошла в туалет, чтобы убедиться, что на этой встрече не будет перерывов, она знала, как отреагирует её Мать, если она попросит разрешения сходить в туалет. Закончив, она вытерлась, спустила воду в унитазе и пошла умываться. Санузел Сера была почти размером с общественный бассейн. Он был огромным. Лилли лениво привела себя в порядок. Всё это дело заняло около двадцати минут.
 
 Закончив, она вытерлась и вернулась в свою комнату, чтобы переодеться. Лилли сначала надела пару шелковистых золотистых трусиков. Ей нравилось ощущение материала на фоне её нежного девичества, хотя она не хотела бы, чтобы кто-нибудь об этом знал. Она надела шёлковый тёмно-золотой тренировочный лифчик, не то чтобы ей очень нравилось его носить, потому что там практически нечего было поддерживать, это заставило Лилли немного смутиться из-за отсутствия бюста. Затем она надела тёмно-золотое шёлковое вечернее платье и пару подходящих тёмно-золотых туфель на высоком каблуке, которые она ненавидела носить. Она расчесала свои короткие белые волосы, а затем сменила обычную заколку на лилию. Её Мать сказала, что это свидетельствует о верности семье Сера.
 
